crates/elif-macros/tests/ui/bootstrap_non_async.rs
use elif::prelude::*;

#[elif::bootstrap(AppModule)]
fn main() -> Result<(), HttpError> {
    // This should fail because the function is not async
}